syntax = "proto3";

package projecthubaccount;

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetMe (GetMeRequest) returns (GetMeResponse);
}

// REGISTER
message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
}

message RegisterResponse {
  string id = 1;
  string email = 2;
  string username = 3;
  bool isEmailVerified = 4;
}

// LOGIN
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
}

// VERIFY EMAIL
message VerifyEmailRequest {
  string token = 1;
}

message VerifyEmailResponse {
  string message = 1;
}

// LOGOUT
message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  string message = 1;
}

// VALIDATE TOKEN
message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string id = 1;
  string email = 2;
  string username = 3;
  bool isEmailVerified = 4; 
}

// GET ME
message GetMeRequest {
  string token = 1;
}

message GetMeResponse {
  string user_id = 1;
  string email = 2;
  string full_name = 3;
}
